# shc

./: .gitignore  CHANGES  CMakeLists.txt  README  install_manifest.txt
src/: shc.c
tests/: build_tests.sh
